solved me fitness card data not showing issue in me fitness page

--- a/src/components/mefitnessdetailspage/mefitnessdetailspage.scss
+++ b/src/components/mefitnessdetailspage/mefitnessdetailspage.scss
@@ -378,15 +378,6 @@
               font-size: 16px;
               font-weight: 300;
               line-height: 21px;
-              max-height: 65px;
-              overflow: hidden;
-              transition: max-height 0.3s ease-in-out;
-              position: relative;
-              margin: 0;
-
-              &.expanded {
-                max-height: 500px;
-              }
 
               span {
                 font-weight: 400;
